# burgers-api

./: .env.example  Burgers-API.postman_collection.json  Cargo.toml  README.md
migrations/2021-02-17-222238_create_burgers/: down.sql  up.sql
src/: connection.rs  main.rs  schema.rs
src/burgers/: handler.rs  mod.rs  repository.rs  router.rs
