[package]
authors = ["Pete <pavlovskipetko@abv.bg>"]
edition = "2018"
name = "burgers-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.0.0", features = ["postgres"]}
dotenv = "0.15.0"
r2d2 = "0.8"
r2d2-diesel = "1.0"
rand = "0.8.0"
rocket = "0.4.7"
rocket_codegen = "0.4.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "*"
